force-app/main/default/objects/CPQ_Settings__mdt/CPQ_Settings__mdt.object-meta.xml
<CustomObject>
    <label>CPQ Setting</label>
    <pluralLabel>CPQ Settings</pluralLabel>
</CustomObject>