force-app/main/default/objects/CPQ_Settings__mdt/fields/DefaultPBAEstimatedConsPerc__c.field-meta.xml
<CustomField>
    <fullName>DefaultPBAEstimatedConsPerc__c</fullName>
    <label>% cons. estimado PBA por defecto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>