force-app/main/default/objects/CPQ_Settings__mdt/fields/DepRate5Years__c.field-meta.xml
<CustomField>
    <fullName>DepRate5Years__c</fullName>
    <label>Factor Dep. 5años</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>