force-app/main/default/objects/CPQ_Settings__mdt/fields/DepYears__c.field-meta.xml
<CustomField>
    <fullName>DepYears__c</fullName>
    <label>Años Dep.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>