force-app/main/default/objects/CPQ_Settings__mdt/fields/DiscountRatePercentage__c.field-meta.xml
<CustomField>
    <fullName>DiscountRatePercentage__c</fullName>
    <label>% tasa descuento</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>