force-app/main/default/objects/CPQ_Settings__mdt/fields/LogsEnabled__c.field-meta.xml
<CustomField>
    <fullName>LogsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, extended logs information is shown for the metrics calculations.</description>
    <inlineHelpText>If true, extended logs information is shown for the metrics calculations.</inlineHelpText>
    <label>LogsEnabled</label>
    <type>Checkbox</type>
</CustomField>