force-app/main/default/objects/CPQ_Settings__mdt/fields/MaxSuggestedDiscountIterations__c.field-meta.xml
<CustomField>
    <fullName>MaxSuggestedDiscountIterations__c</fullName>
    <label>Núm. máximo iter. cálc. descuento</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>