force-app/main/default/objects/CPQ_Settings__mdt/fields/Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Sandbox__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sandbox</label>
    <type>Checkbox</type>
</CustomField>