force-app/main/default/objects/CPQ_Settings__mdt/fields/SuggestDiscountOnOpenStretchManager__c.field-meta.xml
<CustomField>
    <fullName>SuggestDiscountOnOpenStretchManager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sugerir descuento al abrir tramos</label>
    <type>Checkbox</type>
</CustomField>