force-app/main/default/objects/CPQ_Settings__mdt/fields/SuggestedDiscountIterationIncrement__c.field-meta.xml
<CustomField>
    <fullName>SuggestedDiscountIterationIncrement__c</fullName>
    <defaultValue>0.05</defaultValue>
    <label>Increm. iteración desc. recomendado</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>